@@ -1,3 +1,3 @@
 #Build Number for ANT. Do not edit!
-#Sat Jun 30 19:30:26 PDT 2012
-build.number=475
+#Sat Jun 30 22:35:46 PDT 2012
+build.number=493
