@@ -18,7 +18,6 @@ import javax.persistence.Version;
 import org.bukkit.Location;
 import org.bukkit.World;
 import org.morganm.homespawnplus.HomeSpawnPlus;
-import org.morganm.homespawnplus.dynmap.NamedLocation;
 
 import com.avaje.ebean.annotation.CreatedTimestamp;
 import com.avaje.ebean.validation.Length;
@@ -35,7 +34,7 @@ import com.avaje.ebean.validation.NotNull;
 			@UniqueConstraint(columnNames={"world", "group_name"})
 		}
 )
-public class Spawn implements EntityWithLocation, NamedLocation {
+public class Spawn implements EntityWithLocation {
     @Id
     @GeneratedValue(strategy=GenerationType.AUTO)
     private int id;
