@@ -402,7 +402,7 @@ dynmap:
       # Default icon for home markers
       deficon: house
       # Label format - substitute %name% for player's name
-      labelfmt: "%name%(home)"
+      labelfmt: "%name%"
       # (optional) List of visible homes (by user ID) - if non-empty, only these will be shown.
       # To show all homes on a given world, include "world:<worldname>" in the string list
       visiblemarkers: []
